--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <div id="container"></div>
+    <input type="range" min="0" max="100" value="50" class="slider">
+    <script src="scripts.js"></script>
 </body>
 </html>
