finish slider and grid

--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
     <title>Etch-A-Sketch</title>
 </head>
 <body>
+    <h1>Etch-a-Sketch</h1>
     <div id="container"></div>
-    <input type="range" min="0" max="100" value="50" class="slider">
+
+    <div class = "sliding">
+        <div class = "sliderlabel"> Select your grid size</div>
+        <span class="min-value">0</span>
+        <input type="range" min="0" max="100" value="50" class="slider">
+        <span class="max-value">100</span>
+      </div>
+      
     <script src="scripts.js"></script>
 </body>
 </html>
