add color selector

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input type="range" min="0" max="100" value="50" class="slider">
         <span class="max-value">100</span>
       </div>
-      
+    <button id="clear">Reset</button>
     <script src="scripts.js"></script>
 </body>
 </html>
