--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button id="clear">Clear</button>
         <div class="colorSelector">
             <span>Choose your color</span>
-            <input type="color" id="colorPicker" value="#000000">
+            <input type="color" id="color-picker" value="#000000">
         </div>
     </div>
     <script src="scripts.js"></script>
